Added usecase 5 through 8

--- a/LaTeX/Projektrapport/Krav/UC/UC5.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC5.tex
@@ -1,1 +1,2 @@
 \subsubsection{Use Case 5 - Slet produkt}
+Denne Use Case initieres af Superbruger, og har til formål at slette et produkt fra databasen. Flere instanser af Administrationssystem kan slette samtidig, da alle instanser af Administrationssystemer er synkroniseret. For at kunne eksekvere denne Use Case, kræver det at Administrationssystem har forbindelse til CentralServer. Efter endt use case er produktet slettet fra databasen, og ikke ikke synlig i nogen instanser af Administrationssystem, dog skal instanser af Kasseapperat manuelt opdatere.
