--- a/LaTeX/Projektrapport/Krav/UC/UC8.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC8.tex
@@ -1,1 +1,2 @@
 \subsubsection{Use Case 8 - Slet produktkategori}
+Denne Use Case initieres af Superbruger, og har til formål at slette en produktkategori fra databasen. Flere instanser af Administrationssystem kan slette samtidigt, da CentralServer vil ignorere en sletning af ikke eksisterende produktkategori, og alle instanser af Administrationssystem er synkroniseret. For at eksekvere denne Use Case, kræver det at Administrationssystem har forbindelse til CentralServer. Efter endt Use Case er produktkategorien slettet fra databasen, og er ikke længere synlige i nogle instanser af Administrationssystem, dog skal Kasseapperat manuelt opdatere.
