Small changes to UC1-4 :hear_no_evil:

--- a/LaTeX/Projektrapport/Krav/UC/UC1.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC1.tex
@@ -1,2 +1,3 @@
 \subsubsection{Use Case 1 - Gennemfør salg}
-Gennemfør salg foregår på Kasseapparatet. En ekspedient indtaster de varer en kunde ønsker at købe. Når alle de pågældende varer er indtastede giver kunden penge til ekspedienten, som indtaster det modtagne beløb og trykker på knappen der passer til betalingsformen. Kasseapparatet vil derefter registrere købet og sende informationer om købet til CentralServer.
+Denne Use Case har til formål at gennemføre et salg på Kasseapparat.
+Ekspedient indtaster de varer Kunde ønsker at købe. Når alle de pågældende varer er indtastede giver Kunde penge til Ekspedient, som indtaster det modtagne beløb og trykker på knappen til kontant betaling. Kasseapparatet vil derefter registrere købet og sende informationer om købet til CentralServer.
