--- a/LaTeX/Projektrapport/Krav/UC/UC3.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC3.tex
@@ -1,2 +1,2 @@
 \subsubsection{Use Case 3 - Opret produkt}
-Oprettelse af produkter foregår på Administrationssystemet. Systemet betjenes af en Superbruger. Superbrugeren trykker på knappen til at oprette produkt og indtaster informationer om det nye produkt i det vindue der åbner. Informationerne er navnet på produktet, varenummer, pris og hvilken kategori produktet hører til. Når Superbruger godkender oprettelsen bliver der sendt besked til CentralServer om det nye produkt. Herefter lukker vinduet til at oprette produkt og det nye produkt kommer frem i den korrekte produktkategori.
+Denne Use Case har til formål at oprette et produkt i databasen. Oprettelse af produkter foregår på Administrationssystemet. Systemet betjenes af en Superbruger. Superbrugeren trykker på knappen til at oprette produkt og indtaster informationer om det nye produkt i det vindue der åbner. Informationerne er navnet på produktet, varenummer, pris og hvilken kategori produktet hører til. Når Superbruger godkender oprettelsen bliver der sendt besked til CentralServer om det nye produkt. Herefter lukker vinduet til at oprette produkt og det nye produkt kommer frem i den korrekte produktkategori.
