--- a/LaTeX/Projektrapport/Krav/UC/UC7.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC7.tex
@@ -1,2 +1,2 @@
 \subsubsection{Use Case 7 - Rediger produktkategori}
-Denne Use Case initieres af Superbruger, og har til formål at redigere navnet på en produktkategori i databasen. Flere instanser af Administrationssystem kan redigere samtidigt, dog i tilfælde af at to redigerer samtidigt på samme kategori, vil det være sidst sendte redigering være den gældende. For at kunne eksekvere denne Use Case, kræver det at Administrationssystem har forbindelse til CentralServer. Efter endt Use Case er produktkategorien redigeret i databasen, og ændringen er synlig i samtlige instanser af Administrationssystem, dog skal Kasseapperat manuelt opdatere.
+Denne Use Case initieres af Superbruger, og har til formål at redigere navnet på en produktkategori i databasen. For at kunne eksekvere denne Use Case, kræver det at Administrationssystem har forbindelse til CentralServer. For at udføre denne Use Case vælger Superbruger den ønskede produktkategori og trykker på knappen til redigering af produktkategori. Herefter præsenteres Superbruger med et vindue med oplysningerne på produktkategorien, hvori Superbruger refter hensigt. Efter endt Use Case er produktkategorien redigeret i databasen.
