--- a/LaTeX/Projektrapport/Krav/UC/UC6.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC6.tex
@@ -1,2 +1,2 @@
 \subsubsection{Use Case 6 - Opret produktkategori}
-Denne Use Case initieres af Superbruger, og har til formål at oprette en produktkategori i databasen. Flere instanser af Administrationssystem kan oprette disse produktkategorier samtidigt, da de vil blive tildelt unikke ID. For at kunne eksekvere denne Use Case, kræver det at Administrationssystem har forbindelse til CentralServer. Efter endt Use Case er produktkategorien oprettet i databasen, og er synlig i samtlige instanser af Administrationssystem, dog skal Kasseapperat manuelt opdatere.
+Denne Use Case initieres af Superbruger, og har til formål at oprette en produktkategori i databasen. For at kunne eksekvere denne Use Case, kræver det at Administrationssystem har forbindelse til CentralServer. For at oprette en produktkategori, trykker Superbruger på knappen til oprettelse af produktkategori, hvorefter et nyt vindue præsenteres. Heri indtaster Superbruger navnet på produktkategorien, hvorefter der trykkes gem. Efter endt Use Case er produktkategorien oprettet i databasen.
