--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/DesignOgStruktur/DesignAfSoftware.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/DesignOgStruktur/DesignAfSoftware.tex
@@ -41,15 +41,17 @@ For at forstå kommunikationen mellem de forskellige klasser/ pakker er de følg
 	\label{fig:SekvensUC1}
 \end{figure}
 
-På figur \ref{fig:SekvensUC1} er der opsat et sekvensdiagram over Use Case 1 - Gennemfør køb. Her kan man se hvad der sker når en ekspedient starter et salg ved at vælge et produkt i grænsefladen. Når knappen bliver trykket ned, så kalder viewet AddItemCommand i ViewModellen ButtonContent. Dette command tjekker så om der allerede er tilføjet et produkt i shoppinglist. Hvis der er, inkrementeres produktet. Hvis ikke så tilføjes det. Herefter notifier shoppinglist på at der er ændret på totalprice og denne nye værdi hentes derefter af viewet. \\
-Nu da produktet er tilføjet til shoppinglist kan ekspedienten tage imod penge fra kunden, trykke beløbet ind og så til sidst trykke på kontant. Herefter bliver salget så registreret i CentralServeren og der bliver lavet en kvittering ved et kald i FilePrinter.
+På figur \ref{fig:SekvensUC1} er der opsat et sekvensdiagram over Use Case 1 - Gennemfør køb. Her kan man se hvad der sker når en ekspedient starter et salg ved at vælge et produkt i grænsefladen. Når knappen bliver trykket ned, så kalder viewet AddItemCommand i ViewModellen ButtonContent. Dette command tjekker så om der allerede er tilføjet et produkt i shoppinglist. Hvis der er, inkrementeres produktet. Hvis ikke så tilføjes det. Herefter notifier shoppinglist på at der er ændret på totalprice og den nye værdi hentes derefter af viewet. \\
+Nu da produktet er tilføjet til shoppinglist kan ekspedienten tage imod penge fra kunden, trykke beløbet ind og så til sidst trykke på kontant. Herefter bliver der kaldt EndPurchase over i shoppinglist. Resten af sekvensen er vist ved sekvensdiagrammet på figur \ref{fig:SekvensRegisterSale}. Dette diagram er lagt for sig selv for at gøre det ovenstående sekvensdiagram mere overskueligt, men også fordi at ved at dele UC1 op i 2 sekvensdiagrammer, så kunne det første sekvensdiagram vise indtastning af produkter og det næste vise registrering af salg.
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\textwidth]{Systemdesign/Frontend/GUI/DesignOgStruktur/Pics/RegisterSale}
-	\caption{Sekvensdiagram over opstart system}
-	\label{fig:SekvensOpstart}
+	\caption{Sekvensdiagram over registrering af salg.}
+	\label{fig:SekvensRegisterSale}
 \end{figure}
+
+Sekvensdiagrammet på figur \ref{fig:SekvensRegisterSale} viser registrering af salg ved færdigt salg. Først kaldes ShoppingList med EndPurchase. Denne kaldes så DbControl med en reference til sig selv. Dette betyder at DbControl får adgang til alle de produkter som er tilføjet. Herefter kalder opretter DbControl connect for at forbinde til \gls{CS}. H	erefter sender DbControl en \textit{RegisterPurchaseCommand} som fortæller CentralServer at der er gennemført en handel, og samtidig hvilke produkter der er solgt. Dette betyder at CentralServer kan producere en rekvisitionskvittering. Til sidst så disconnecter DbControl forbindelsen til centralserver ved et kald til Disconnect i Connection og kalder derefter PrintPurchase i FilePrinter som derved producerer en salgskvittering.
 
 \begin{figure}[H]
 	\centering
