--- a/LaTeX/Projektrapport/Krav/Aktorbeskrivelse.tex
+++ b/LaTeX/Projektrapport/Krav/Aktorbeskrivelse.tex
@@ -1,6 +1,6 @@
 \section{Aktørbeskrivelse}
 
-I det følgende afsnit kan der læses om de aktører som er tilknyttet systemet. \\
+I det følgende afsnit kan der læses om de aktører, der er tilknyttet systemet. \\
 
 \begin{figure}[H]
 	\centering
@@ -21,7 +21,7 @@ I det følgende afsnit kan der læses om de aktører som er tilknyttet systemet.
 		\hline
 	\end{tabularx}
 	\captionsetup{justification=raggedright,singlelinecheck=false}
-	\caption{Aktør beskrivelse af Ekspedient}
+	\caption{Aktørbeskrivelse af Ekspedient}
 	\label{tab:AktEks}
 \end{table}
 
@@ -29,7 +29,7 @@ I det følgende afsnit kan der læses om de aktører som er tilknyttet systemet.
 \begin{table}[H]
 	\begin{tabularx}{\textwidth}{|l|X|}
 		\hline
-		\textbf{Navn} & Super User \\
+		\textbf{Navn} & Superbruger \\
 		\hline
 		\textbf{Type} & Primær \\
 		\hline
@@ -37,7 +37,7 @@ I det følgende afsnit kan der læses om de aktører som er tilknyttet systemet.
 		\hline
 	\end{tabularx}
 	\captionsetup{justification=raggedright,singlelinecheck=false}
-	\caption{Aktør beskrivelse af Superbruger}
+	\caption{Aktørbeskrivelse af Superbruger}
 	\label{tab:AktSuu}
 \end{table}
 
@@ -53,7 +53,7 @@ I det følgende afsnit kan der læses om de aktører som er tilknyttet systemet.
 		\hline
 	\end{tabularx}
 	\captionsetup{justification=raggedright,singlelinecheck=false}
-	\caption{Aktør beskrivelse af kunden}
+	\caption{Aktørbeskrivelse af Kunde}
 	\label{tab:AktKu}
 \end{table}
 
