--- a/LaTeX/Projektrapport/Krav/UC/UC8.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC8.tex
@@ -1,2 +1,2 @@
 \subsubsection{Use Case 8 - Slet produktkategori}
-Denne Use Case initieres af Superbruger, og har til formål at slette en produktkategori fra databasen. For at eksekvere denne Use Case, kræver det at Administrationssystem har forbindelse til CentralServer. For at udføre denne Use Case vælger Superbruger den produktkategori der ønskes at slettes, hvorefter der trykkes på knappen til slet. Et vindue præsenteres for brugeren, der bedre brugeren at bekræfte sletningen. Såfremt der er produkter i produktkategorien, vil det ikke være muligt at bekræfte sletningen, men kun at flytte de produkter der er i produktkategorien, til en anden. Derefter kan Superbruger slette produktkategorien. Efter endt Use Case er produktkategorien slettet fra databasen.
+Denne use case har til formål at slette en produktkategori fra produktkataloget. For at udføre denne use case vælger Superbruger den produktkategori der ønskes slettet, hvorefter der trykkes på knappen til slet. Et vindue præsenteres for brugeren, der beder brugeren bekræfte sletningen. Såfremt der er produkter i produktkategorien, vil det ikke være muligt at bekræfte sletningen, men kun at flytte de produkter, der er i produktkategorien, til en anden. Derefter kan Superbruger slette produktkategorien. Efter endt use case er produktkategorien slettet fra produktkataloget.
