--- a/LaTeX/Projektrapport/Krav/UC/UC2.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC2.tex
@@ -1,2 +1,2 @@
 \subsubsection{Use Case 2 - Returner vare}
-Denne Use Case har til formål at returnere vare. Når Kunde ønsker at returnere en vare og få penge tilbage udføres denne Use Case. Ekspedient indtaster varer til retur og trykker på knappen til kontant betaling. Herefter bliver der sendt informationer om returneringen til CentralServer.
+Denne use case har til formål at returnere vare. Ekspedient indtaster varer til retur og trykker på knappen til returnering af varer. Herefter bliver der sendt informationer om returneringen til CentralServer.
