--- a/LaTeX/Projektrapport/Krav/UC/UC5.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC5.tex
@@ -1,2 +1,2 @@
 \subsubsection{Use Case 5 - Slet produkt}
-Denne Use Case initieres af Superbruger, og har til formål at slette et produkt fra databasen. For at kunne eksekvere denne Use Case, kræver det at Administrationssystem har forbindelse til CentralServer. Superbruger vælger det produkt der ønskes at slettes, og trykker på knappen til slet, hvorefter et vindue præsenteres for Superbruger, hvori der bekræftes. Alternativt kan Superbruger højreklikke på produktet og følge samme fremgangsmåde. Efter endt use case er produktet slettet fra databasen.
+Denne use case har til formål at slette et produkt fra produktkataloget. Superbruger vælger det produkt, der ønskes at slettes og trykker på knappen til slet, hvorefter et vindue præsenteres for Superbruger, hvori der bekræftes. Alternativt kan Superbruger højreklikke på produktet og følge samme fremgangsmåde. Efter endt use case er produktet slettet fra produktkataloget.
