--- a/LaTeX/Projektrapport/Krav/UC/UC7.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC7.tex
@@ -1,2 +1,2 @@
 \subsubsection{Use Case 7 - Rediger produktkategori}
-Denne Use Case initieres af Superbruger, og har til formål at redigere navnet på en produktkategori i databasen. For at kunne eksekvere denne Use Case, kræver det at Administrationssystem har forbindelse til CentralServer. For at udføre denne Use Case vælger Superbruger den ønskede produktkategori og trykker på knappen til redigering af produktkategori. Herefter præsenteres Superbruger med et vindue med oplysningerne på produktkategorien, hvori Superbruger refter hensigt. Efter endt Use Case er produktkategorien redigeret i databasen.
+Denne use case har til formål at redigere navnet på en produktkategori i produktkataloget. For at udføre denne use case vælger Superbruger den ønskede produktkategori og trykker på knappen til redigering af produktkategori. Herefter præsenteres Superbruger med et vindue med oplysningerne på produktkategorien, hvori Superbruger retter navnet. Efter endt use case er produktkategorien redigeret i produktkataloget.
