Review changes to Projektformulering+Systembeskr.

--- a/LaTeX/Projektrapport/Projektformulering/Moscow.tex
+++ b/LaTeX/Projektrapport/Projektformulering/Moscow.tex
@@ -2,11 +2,11 @@
 
 \begin{itemize}
 
-\item Systemet skal have et Administrationssystem, hvor en Superbruger kan oprette, redigere og slette Produktkategori og Produkt i databasen
+\item Systemet skal have et Administrationssystem, hvor en Superbruger kan oprette, redigere og slette produktkategori og produkt i databasen
 \item Systemet skal indeholde et Kasseapparat, hvor …:
 \begin{itemize}
-\item En Ekspedient kan sælge produkter til kunder
-\item En kunde kan returnere varer til en Ekspedient
+\item Ekspedient kan sælge produkter til kunder
+\item Kunde kan returnere varer til Ekspedient
 \end{itemize}
 \item Kasseapparat skal …:
 \begin{itemize}
@@ -14,8 +14,8 @@
 \item Danne en salgskvittering
 \item Danne en rekvisionskvittering
 \end{itemize}
-\item Indeholde en Database, som indeholder et produktkatalog
-\item Indeholde kommunikation mellem Administrationssystem og Kasseapparat
+\item Systemet skal indeholde en database, som indeholder et produktkatalog
+\item Systemet skal have en CentralServer der står for at kommunikere med Kasseapparat og Administrationssystem
 
 \end{itemize}
 
@@ -26,15 +26,15 @@
 
 \item Understøtte brugerlogin i flere niveauer
 \begin{itemize}
-\item En Superbruger, der kan tilgå Administrationssystem\\
-\item En Ekspedient, der kan tilgå Kasseapparat
+\item Superbruger, der kan tilgå Administrationssystem\\
+\item Ekspedient, der kan tilgå Kasseapparat
 \end{itemize}
 \item Ekspeditioner kan parkeres midlertidigt
-\item Benytte variabel momssats per Produkt
+\item Benytte variabel momssats per produkt
 \item Understøtte flere forskellige instanser af Kasseapparat på samme tid
 \item Understøtte tilbudskampagner
 \item Have kontrol af lagerbeholdningen i Administrationssystem
-\item En Ekspedient kan afskrive et Produkt, hvis den f.eks. er gået i stykker
+\item Ekspedient kan afskrive et produkt, hvis den f.eks. er gået i stykker
 \item Vise salgsstatistik i Administrationssystem
 \item Udskrive en salgskvittering via Kasseapparat
 \item Kasseapparat bør kunne tage imod dankort betaling
