--- a/LaTeX/Projektrapport/Systembeskrivelse/Beskrivelse.tex
+++ b/LaTeX/Projektrapport/Systembeskrivelse/Beskrivelse.tex
@@ -1,10 +1,10 @@
-Salgssystemet fungerer først og fremmest via et Kasseapparat med et grafisk touch interface, herfra kan en Ekspedient sælge varer til en eventuel kunde og tage imod betaling herfra. 
+Salgssystemet fungerer først og fremmest via et Kasseapparat med et grafisk touch interface, herfra kan Ekspedient sælge varer til en kunde og tage imod betaling herfra. 
 
-Kasseapparatet sender/henter data til/fra en Central server der yderligere kommunikere med en database, dette gør at Kasseapparatet kan modtage et produktkatalog fra-, og få gemt et salg i databasen. 
+Kasseapparatet sender/henter data til/fra CentralServer der yderligere kommunikere med databasen, dette gør at Kasseapparatet kan modtage et produktkatalog fra, og få gemt et salg, i databasen. 
 
-Der findes derudover en Superbruger der igennem et grafisk interface har adgang til Administrationssystemet. Herfra kan Superbrugeren tilføje, slette og redigere produkter og produktkategorier i produktkataloget. Dette betyder at Administrationssystemet også har en forbindelse til Central server.
+Superbruger har igennem et grafisk interface adgang til Administrationssystem. Herfra kan Superbruger tilføje, slette og redigere produkter og produktkategorier i produktkataloget. Dette betyder at Administrationssystemet også har en forbindelse til CentralServer.
 
-Central server sørger for alt kommunikation med databasen og at håndterer alt kommunikation til og fra alle instanser af Administrationssystem og Kasseapparat.
+CentralServer sørger for al kommunikation med databasen og at håndtere al kommunikation til og fra alle instanser af Administrationssystem og Kasseapparat.
 
 
 \begin{figure}[!h]
@@ -13,4 +13,3 @@ Central server sørger for alt kommunikation med databasen og at håndterer alt 
     \caption{Rigt billede over Salgssystemet}
     \label{fig:Rigtbill}
 \end{figure}
-
