--- a/LaTeX/Projektrapport/Projektformulering/Formulering.tex
+++ b/LaTeX/Projektrapport/Projektformulering/Formulering.tex
@@ -1,3 +1,3 @@
-Vi fremstiller et salgssystem til fysiske butikker. Systemet består af en central server, herefter benævnt som Central server, hvortil et eller flere Kasseapparater er tilsluttet. Ekspedienter kan ekspedere kunder via Kasseapparater, som kan tilgås via en touch-skærm. En Superbruger kan derudover tilgå et Administrationssystem, der kører på Central server, hvor der er mulighed for at oprette, redigere og slette produkter og produktkategorier. Administrationssystemet kan tilgås via en vilkårlig computer med forbindelse til Central server\\
+Der er fremstillet et salgssystem til fysiske butikker. Systemet består af en central server, herefter benævnt som CentralServer, hvortil et eller flere kasseapparater er tilsluttet. Ekspedienter kan ekspedere kunder via kasseapparater, som kan tilgås via en grafisk brugerflade, eksempelvis en touch-skærm. En Superbruger kan derudover tilgå et Administrationssystem, der kører på CentralServer, hvor der er mulighed for at oprette, redigere og slette produkter og produktkategorier. Administrationssystemet kan tilgås via en vilkårlig computer med forbindelse til CentralServer\\
 
-Central server indeholder en database, hvor produkter, produktkategorier mv, ligger gemt. Herfra henter Kasseapparaterne de nædvendige informationer såsom produktoplysninger. Kasseapparater informerer desuden Central server når et salg har fundet sted.
+CentralServer indeholder en database, hvor produkter, produktkategorier mv, ligger gemt. Herfra henter Kasseapparaterne de nødvendige informationer såsom produktoplysninger. Kasseapparater informerer desuden CentralServer når et salg har fundet sted.
