--- a/LaTeX/Projektrapport/Projektbeskrivelse/Udviklingsvarktojer.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Udviklingsvarktojer.tex
@@ -1,1 +1,35 @@
 \section{Udviklingsværktøjer}
+I følgende afsnit er der beskrevet hvilke udviklingsværktøjer der har været benyttet i forbindelse med udviklingen af kassesystemet.\\
+
+\textbf{LaTeX}\\
+LaTeX har været benyttet som skriveværktøj til både rapport og dokumentation. Dette er valgt da dokumenter kan deles op i mindre filer, og derved opnå at flere kan arbede på samme dokument simultant. \\
+
+\textbf{Dropbox}\\
+Dropbox har været benyttet til generel fildeling, herunder til mødereferater, diagrammer mv. Dette giver en nem måde at holde filer opdateret blandt flere interessanter. \\
+
+\textbf{Git}\\
+Git har været benyttet til versionsstyring af både kode, dokumentation og rapport. Git giver først og fremmest en måde at styre koden på, men også mulighed for at få reviewet koden af en anden, således der altid er mindst to der har set på koden.\\
+
+\textbf{Enterprise Architect}~\cite{EA}\\
+Har været benyttet til at tegne diagrammer. Det har givet en ensartet UML-notation, såvel som andre diagrammer.\\
+
+
+\textbf{Visual Studio}\\
+Har været benyttet som C\# sharp IDE\footnote{Integrated Development Environment}. Visual Studio giver mulighed for at bruge eksterne plugins, IntelliSense\footnote{Itelligent kode færdiggørelse og dynamisk fejlgenkendelse}.\\
+
+\textbf{ReSharper}~\cite{ReSharper}\\
+ReSharper har været benyttet som en udvidet IntelliSense og refactoring samt som placeholder for eksterne plugins, som også stammer fra JetBrains~\cite{JetBrains}, som også har udviklet ReSharper.\\
+
+\textbf{NUnit}~\cite{NUnit}\\
+NUnit har været benyttet som testing framework for både unit- og integrationframework. Denne har været benyttet på baggrund af erfaring fra software test kurset.\\
+
+\textbf{NSubstitute}~\cite{NSubstitute}\\
+NSubstitute har været benyttet som substitution framework i forbindelse med unit- og integrationstest. Dette har været benyttet således manuel fakeing ifm. test ikke har været nødvendigt.\\
+
+\textbf{DotCover}~\cite{dotCover}\\
+DotCover har været benyttet som code coverage værktøj, for at skabe overblik over hvor meget kode som er testet. Værktøjet er leveret af JetBrains~\cite{JetBrains}.\\
+
+\textbf{Entity Framework}~\cite{EF}\\
+Entity Framework har været benyttet framework til oprettelse af databasen i CentralServer. Entity Framework automatiserer meget, og gør det væsentligt nemmere at arbejde med databaser.
+
+
