--- a/LaTeX/Projektrapport/Projektbeskrivelse/Udviklingsvarktojer.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Udviklingsvarktojer.tex
@@ -11,25 +11,25 @@ Dropbox har været benyttet til generel fildeling, herunder til mødereferater, 
 Git har været benyttet til versionsstyring af både kode, dokumentation og rapport. Git giver først og fremmest en måde at styre koden på, men også mulighed for at få reviewet koden af en anden, således der altid er mindst to der har set på koden.\\
 
 \textbf{Enterprise Architect}~\cite{EA}\\
-Har været benyttet til at tegne diagrammer. Det har givet en ensartet UML-notation, såvel som andre diagrammer.\\
+Enterprise Architect har været benyttet til at tegne diagrammer. Det har givet en ensartet UML-notation, såvel som andre diagrammer.\\
 
 
 \textbf{Visual Studio}\\
-Har været benyttet som C\# sharp IDE\footnote{Integrated Development Environment}. Visual Studio giver mulighed for at bruge eksterne plugins, IntelliSense\footnote{Itelligent kode færdiggørelse og dynamisk fejlgenkendelse}.\\
+Visual Studio har været benyttet som C\# sharp IDE\footnote{Integrated Development Environment}. Visual Studio leverer IntelliSense\footnote{Itelligent kode færdiggørelse og dynamisk fejlgenkendelse}, som gør udvikling langt hurtigere.\\
 
 \textbf{ReSharper}~\cite{ReSharper}\\
-ReSharper har været benyttet som en udvidet IntelliSense og refactoring samt som placeholder for eksterne plugins, som også stammer fra JetBrains~\cite{JetBrains}, som også har udviklet ReSharper.\\
+ReSharper har været benyttet som en udvidet IntelliSense og hjælp til refactoring af kode. ReSharper er udviklet af JetBrains, hvilket betyder at mange af JetBrains~\cite{JetBrains} andre programmer, såsom NUnit, kan bruges direkte fra Visual Studio på grund af ReSharper.\\
 
 \textbf{NUnit}~\cite{NUnit}\\
 NUnit har været benyttet som testing framework for både unit- og integrationframework. Denne har været benyttet på baggrund af erfaring fra software test kurset.\\
 
 \textbf{NSubstitute}~\cite{NSubstitute}\\
-NSubstitute har været benyttet som substitution framework i forbindelse med unit- og integrationstest. Dette har været benyttet således manuel fakeing ifm. test ikke har været nødvendigt.\\
+NSubstitute har været benyttet som substitution framework i forbindelse med unit- og integrationstest. Dette har været benyttet således at det ikke var nødvendigt manuelt at lave fakes i forbindelse med tests.\\
 
 \textbf{DotCover}~\cite{dotCover}\\
 DotCover har været benyttet som code coverage værktøj, for at skabe overblik over hvor meget kode som er testet. Værktøjet er leveret af JetBrains~\cite{JetBrains}.\\
 
 \textbf{Entity Framework}~\cite{EF}\\
-Entity Framework har været benyttet framework til oprettelse af databasen i CentralServer. Entity Framework automatiserer meget, og gør det væsentligt nemmere at arbejde med databaser.
+Entity Framework har været benyttet til oprettelse af og kommunikation med databasen i CentralServer. Entity Framework automatiserer meget, og gør det væsentligt nemmere at arbejde med databaser.
 
 
